# oracle-adw-snapshotter

./: .env.example  .gitignore  README.md  pyproject.toml
config/: tasks.example.yaml
sql/: init_snapshot_objects.sql
src/oracle_adw_snapshotter/: cli.py
src/oracle_adw_snapshotter/config/: settings.py
src/oracle_adw_snapshotter/connectors/: oracle.py
src/oracle_adw_snapshotter/jobs/: random_runner.py  runner.py
src/oracle_adw_snapshotter/models/: types.py
src/oracle_adw_snapshotter/services/: query_service.py  random_schedule.py  scheduler_loop.py
src/oracle_adw_snapshotter/storage/: run_log_repository.py  scheduler_run_repository.py  snapshot_reader.py  snapshot_writer.py
tests/: test_config_smoke.py  test_random_schedule.py  test_scheduler_dedup.py  test_scheduler_stability.py  test_view_export_smoke.py
